# who_else_spend_time_on_it

./: README.md  main.py  pyproject.toml  scraper.py  server.py
static/: app.js  index.html  styles.css
