[project]
name = "design-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "playwright>=1.60.0",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
